<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/txt_language">
        <Preference
                android:key="@string/key_setting_language"
                android:summary="Tap to change the language"
                android:title="Change Language"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/txt_notifications">

        <SwitchPreference
                android:key="@string/key_daily_notification"
                android:title="Daily Reminder"
                android:summary="Reminder for return to movie app"
                android:defaultValue="false"/>
        <SwitchPreference
                android:key="@string/key_release_movie"
                android:title="Release Reminder"
                android:summary="Reminder showing the movie that release today"
                android:defaultValue="false"/>

    </PreferenceCategory>


</PreferenceScreen>